# winshell11

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: ci.yml
config/: Enable-ShellLauncher.ps1  Restore-Shell.ps1  Set-CustomShell.reg  ShellLauncherConfiguration.xml  fix-wmi.ps1  shell.config.json.sample  test-wmi.ps1
installer/: CustomShell.iss
src/WinUIShell/: App.xaml  App.xaml.cs  AppItemModel.cs  CMakeLists.txt  CategoryConverter.cs  FlyoutControl.xaml  FlyoutControl.xaml.cs  IconHelper.cs  NativeMethods.cs  StartMenuControl.xaml  StartMenuControl.xaml.cs  WinUIShell.csproj
src/backend/: CMakeLists.txt  exports.cpp  exports.h
src/common/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h
src/desktop/: CMakeLists.txt  ContextMenuHelper.cpp  DesktopWidgets.cpp  DesktopWidgets.h  DesktopWindow.cpp  DesktopWindow.h  IconManager.cpp  IconManager.h
src/flyout/: CMakeLists.txt  FlyoutWindow.cpp  FlyoutWindow.h
src/launcher/: AppLauncher.cpp  AppLauncher.h  CMakeLists.txt
src/power/: PowerManager.cpp  PowerManager.h
src/shellhost/: CMakeLists.txt  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  main.cpp
src/taskbar/: CMakeLists.txt  TaskbarWidgets.cpp  TaskbarWidgets.h  TaskbarWindow.cpp  TaskbarWindow.h
src/tray/: CMakeLists.txt  TrayHost.cpp  TrayHost.h
src/ui/: Animation.cpp  Animation.h  CMakeLists.txt  Controls.cpp  Controls.h  Renderer.cpp  Renderer.h  Theme.h  UiHost.cpp  UiHost.h  Widget.cpp  Widget.h
src/watchdog/: CMakeLists.txt  main.cpp
src/windowwatcher/: CMakeLists.txt  WindowWatcher.cpp  WindowWatcher.h
